// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpTopicURL/> default properties 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-12"
  >
    <a
      className="domain-field-float-right"
      href="https://www.labkey.org/Documentation/wiki-page.view?name=testTopic"
      target="_blank"
    >
      Learn more about this tool
    </a>
  </div>
</div>
`;

exports[`<HelpTopicURL/> with nounPlural 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-12"
  >
    <a
      className="domain-field-float-right"
      href="https://www.labkey.org/Documentation/wiki-page.view?name=sampleTopic"
      target="_blank"
    >
      Learn more about designing samples
    </a>
  </div>
</div>
`;
